# swmetrics

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  continuous-integration.yml
swmetrics/: swmetrics.py
swmetrics/general/: general.py
tests/swmetrics/general/: test_general.py
